<resources>
    <string name="app_name">Geek Out!</string>
    <string name="help">Help</string>
    <string name="newGameButtonDesc">New Game Button</string>
    <string name="joinGameButtonDesc">Join Game Button</string>
    <string name="userSettingButtonDesc">User Settings Button</string>
    <string name="rulesButtonDesc">Rules Button</string>
    <string name="login">Login</string>
    <string name="account_login">Account login</string>
    <string name="register">Register</string>
    <string name="register_new_account">Register new account</string>
    <string name="register_success">Registration successful!</string>
    <string name="register_failed">Registration failed! Please try again later</string>
    <string name="email_hint">Email</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name ="edit_profile">Edit Profile</string>
    <string name="code">Code</string>
    <string name="create_game">Create</string>
    <string name="code_hint">Code</string>
    <string name="join_game">Join</string>
    <string name="ready">Start</string>
    <string name="save">Save</string>
    <string name="players">Players</string>
    <string name="test_player">Jeff</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="return_button">Return</string>
    <string name="zero_points">Points: 0</string>
    <string name="question">Question</string>
    <string name="round">Round</string>
    <string name="enter_bid">Enter Bid</string>
    <string name="bid">Bid</string>
    <string name="test_bid">Bid: 1</string>
    <string name="pass">Pass</string>
    <string name="highest_bidder">Current Highest Bidder</string>
    <string name="wait">Waiting for player to submit answers</string>
    <string name="wait_review">Waiting for player(s) to review answers</string>
    <string name="answers">Input Answers</string>
    <string name="enter_answer">Enter Answer</string>
    <string name="submit">Submit</string>
    <string name="update_points">Update Points</string>
    <string name="accepted_answers">Accepted Answers</string>
    <string name="won_bid">won the bid!</string>
    <string name="player_won">WON THE GAME!</string>
    <string name="new_game">New Game</string>
    <string name="join_game_2">Join Game</string>
    <string name="rules">Rules</string>
    <string name="review_answers">Review Answers</string>
    <string name="test_answer">answer</string>
    <string name="update">Update</string>
    <string name="points">Points</string>
    <string name="update_points_win">Updated Points Needed to Win:</string>
    <string name="current_points_win">Current Points Needed to Win:</string>
    <string name="textview">TextView</string>
    <string name="instructions">Instructions</string>
    <string name="geek_out_rules">GEEK-OUT RULES</string>
"
</resources>