<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/polka_dot_background"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/layout2"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintBottom_toTopOf="@id/layout3">

        <Button
            android:id="@+id/newGameButton"
            android:layout_width="135dp"
            android:layout_height="135dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@color/colorPrimary"
            android:elevation="10dp"
            android:text="@string/new_game"
            android:contentDescription="@string/newGameButtonDesc" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintLeft_toRightOf="@id/layout1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintBottom_toTopOf="@id/layout4">

        <Button
            android:id="@+id/joinGameButton"
            android:layout_width="135dp"
            android:layout_height="135dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@color/colorPrimary"
            android:elevation="10dp"
            android:text="@string/join_game_2"
            android:contentDescription="@string/joinGameButtonDesc" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/layout4"
        app:layout_constraintTop_toBottomOf="@id/layout1"
        app:layout_constraintBottom_toTopOf="@id/layout5">

        <Button
            android:id="@+id/rulesButton"
            android:layout_width="135dp"
            android:layout_height="135dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@color/colorPrimary"
            android:elevation="10dp"
            android:text="@string/rules"
            android:contentDescription="@string/rulesButtonDesc" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintLeft_toRightOf="@id/layout3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout2"
        app:layout_constraintBottom_toTopOf="@id/layout5">

        <Button
            android:id="@+id/userSettingsButton"
            android:layout_width="135dp"
            android:layout_height="135dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@color/colorPrimary"
            android:elevation="10dp"
            android:text="@string/edit_profile"
            android:contentDescription="@string/userSettingButtonDesc" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout3"
        app:layout_constraintBottom_toBottomOf="parent">
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>